Add solution for day 7

--- a/Advent/Advent.Text/Advent.Text.csproj
+++ b/Advent/Advent.Text/Advent.Text.csproj
@@ -8,6 +8,6 @@
   <ItemGroup>
     <Folder Include="Solvers\" />
     <Folder Include="Toboggan\" />
-    <Folder Include="Passports\" />
+    <Folder Include="Luggage\" />
   </ItemGroup>
 </Project>
