Add solution to day 8

--- a/Advent/Advent.Text/Advent.Text.csproj
+++ b/Advent/Advent.Text/Advent.Text.csproj
@@ -9,5 +9,6 @@
     <Folder Include="Solvers\" />
     <Folder Include="Toboggan\" />
     <Folder Include="Luggage\" />
+    <Folder Include="VirtualMachines\" />
   </ItemGroup>
 </Project>
