--- a/Advent/Advent.Text/Advent.Text.csproj
+++ b/Advent/Advent.Text/Advent.Text.csproj
@@ -11,5 +11,6 @@
     <Folder Include="Luggage\" />
     <Folder Include="VirtualMachines\" />
     <Folder Include="Security\" />
+    <Folder Include="Life\" />
   </ItemGroup>
 </Project>
