Add solutions for day 18

--- a/Advent/Advent.Text/Advent.Text.csproj
+++ b/Advent/Advent.Text/Advent.Text.csproj
@@ -11,5 +11,6 @@
     <Folder Include="VirtualMachines\" />
     <Folder Include="Security\" />
     <Folder Include="Life\" />
+    <Folder Include="Math\" />
   </ItemGroup>
 </Project>
