--- a/Advent/Advent.Text/Advent.Text.csproj
+++ b/Advent/Advent.Text/Advent.Text.csproj
@@ -12,5 +12,6 @@
     <Folder Include="Security\" />
     <Folder Include="Life\" />
     <Folder Include="Math\" />
+    <Folder Include="Communication\" />
   </ItemGroup>
 </Project>
