Add a messy messy solution to Day 20

--- a/Advent/Advent.Text/Advent.Text.csproj
+++ b/Advent/Advent.Text/Advent.Text.csproj
@@ -13,5 +13,6 @@
     <Folder Include="Life\" />
     <Folder Include="Math\" />
     <Folder Include="Communication\" />
+    <Folder Include="ImageProcessing\" />
   </ItemGroup>
 </Project>
