Add solutions to day 21

--- a/Advent/Advent.Text/Advent.Text.csproj
+++ b/Advent/Advent.Text/Advent.Text.csproj
@@ -14,5 +14,6 @@
     <Folder Include="Math\" />
     <Folder Include="Communication\" />
     <Folder Include="ImageProcessing\" />
+    <Folder Include="Language\" />
   </ItemGroup>
 </Project>
