Add solutions for day 22

--- a/Advent/Advent.Text/Advent.Text.csproj
+++ b/Advent/Advent.Text/Advent.Text.csproj
@@ -15,5 +15,6 @@
     <Folder Include="Communication\" />
     <Folder Include="ImageProcessing\" />
     <Folder Include="Language\" />
+    <Folder Include="Games\" />
   </ItemGroup>
 </Project>
